# Prod-Consumer

./: CMakeLists.txt  README.md
producer_consumer/src/: buffer.cpp  buffer.h  consumer.cpp  consumer.h  logger.h  main.cpp  producer.cpp  shared.cpp  shared.h
src/: logger.cpp  mainwindow.cpp  mainwindow.h  producer.h  stats.cpp  stats.h
